--- a/contact.html
+++ b/contact.html
@@ -11,13 +11,14 @@
 <body>
     <hr>
     <a href="index.html">Home</a> |
-    <a href="contact.html">Contact</a>
+    <a href="contact.html">Contact</a> |
+    <a href="Gallery.html">Gallery</a> 
     <hr>
     <!-- list.......... -->
     <table cellspacing = "10">
         <tr>
             <td>
-        <img src="images/teme.png.JPG" border="1" alt="Temesgen profile image">
+        <img src="images/teme.JPG" border="1" alt="Temesgen profile image" width = "150" length ="150">
             </td>
             <td>
                 <h1>Temesgen Geta </h1>
@@ -30,38 +31,61 @@
         </tr>
 
     </table>
-   
-
+    <hr>
 <h3>contact us....</h3>
 <form action="mailto:se.temesgen.geta@gmail.com" enctype="utf-8" method = "POST">
-    <label for="fName">First Name:</label>
+    <table>
+        <tr>
     <!-- nbsp -->
-    <input type="text" name = "fName" id="fName" required>
-    <br>
-    <label for="sName"> Sure Name:</label>
-    <input type="text" name = "sName" id="sName" required>
-    <br>
-    <label for="email">Email:</label>
-     <input type="email" name = "email" id = "email" required>
-     <br>
-     <br>
-     where are you from?:
-     <select name="country" id="">
-     <option value = "a">Africa</option>
-     <option value = "b">Asia</option>
-     <option value = "c">America</option></select>
-    
-     <br>
-    what you want to say?
-    <br>
-    <textarea name="" id="" cols="30" rows="10"></textarea>
-    <br>
-    <input type="submit" value = "submit"> 
+            <td><label for="fName">First Name:</label></td>
+            <td> <input type="text" name = "fName" id="fName" required></td>
+            <td><label for="sName"> Sure Name:</label></td>
+            <td><input type="text" name = "sName" id="sName" required></td>
+        </tr>
+        <tr>
+            <td> <label for="email">Email:</label></td>
+            <td> <input type="email" name = "email" id = "email" required></td>
+        </tr>
+        <tr>
+            <td> <label for="Password">Password:</label></td>
+            <td> <input type="text" name="password" id = "password" required></td>
+        </tr>
+        <tr>
+           <td>
+            where are you from?:
+            <select name="country" id="">
+            <option value = "a">Africa</option>
+            <option value = "b">Asia</option>
+            <option value = "c">America</option></select>
+           </td>
+        </tr>
+        <tr>
+           <td>  
+            what you want to say?
+            <br>
+            <textarea name="" id="" cols="30" rows="10"></textarea>
+           </td>
+           <br>
+           <td > 
+            <div class="mapouter" width = "150" length = "150"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" 
+                src="https://maps.google.com/maps?q=AAiT&t=&z=13&ie=UTF8&iwloc=&output=embed" 
+                frameborder="0" scrolling="no" marginheight="0" marginwidth="0">
+                </iframe><a href="https://www.enable-javascript.net/blog/divi-discount/">divi builder demo</a>
+                </div><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}
+                </style>
+            </div>
+           </td>
+        </tr>
+        <tr>
+            <td>
+                <input type="submit" value = "submit"> 
+            </td>
+        </tr>
+    </table>
 </form>
-<a href="https://twitter.com/" target = "_blank">twitter</a>|
-<a href="https://www.youtube.com/" taget = "_blank">youtube</a>|
-<a href="https://www.yahoo.com/" target = "_blank">Yahoo</a>|
+<a href="https://twitter.com/" target = "_blank">twitter</a> |
+<a href="https://www.youtube.com/" taget = "_blank">youtube</a> |
+<a href="https://www.yahoo.com/" target = "_blank">Yahoo</a> |
 <a href="https://www.instagram.com/" target = "_blank">instagram</a>
 </body>
-
 </html>
