--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
 </head>
 <body>
     <hr>
-    <a href="index.html">Home</a> |
-    <a href="contact.html">Contact</a>
+    <a href="index.html">Home</a>  |
+    <a href="contact.html">Contact</a>  |
+    <a href="Gallery.html">Gallery</a>
     <hr>
     <!-- list.......... -->
     <table cellspacing = "10">
         <tr>
             <td>
-        <img src="images/teme.png.JPG" border="1" alt="Temesgen profile image">
+        <img src="images/teme.JPG" border="1" alt="Temesgen profile image" width = "150" length ="150">
             </td>
             <td>
                 <h1>Temesgen Geta </h1>
