pattern attribute is used on contact form

--- a/Gallery.html
+++ b/Gallery.html
@@ -21,12 +21,15 @@
         <img src="images/teme.JPG" border="1" alt="Temesgen profile image" width = "150" length ="150">
             </td>
             <td>
-                <h1>Temesgen Geta </h1>
-                <h3>Student, Addis Ababa Institute of Technology</h3>
-                <p>Hi there, </p>
-                <p>I am Temesgen, I am expert <strong>java</strong> developer who has been working on java since
-                <em>14</em></em14> years. I am passionate about working in different types of programming language
-            </p>
+                <p>
+                    <h1>Temesgen Geta </h1>
+                    <h3>Student @ Addis Ababa Institute of Technology</h3>
+                    <p>Hi friends:</p>
+                    <p>I am Temesgen, I am expert <strong>web</strong> developer who has been working on web since
+                    <em>14</em></em14> years. I am passionate about working in different types of programming language such as
+                    python, java, c++, csharp and also script language.
+                </p>
+            
             </td>
         </tr>
     </table>
