--- a/contact.html
+++ b/contact.html
@@ -22,10 +22,11 @@
             </td>
             <td>
                 <h1>Temesgen Geta </h1>
-                <h3>Student, Addis Ababa Institute of Technology</h3>
-                <p>Hi there, </p>
-                <p>I am Temesgen, I am expert <strong>java</strong> developer who has been working on java since
-                <em>14</em></em14> years. I am passionate about working in different types of programming language
+                <h3>Student @ Addis Ababa Institute of Technology</h3>
+                <p>Hi friends:</p>
+                <p>I am Temesgen, I am expert <strong>web</strong> developer who has been working on web since
+                <em>14</em></em14> years. I am passionate about working in different types of programming language such as
+                python, java, c++, csharp and also script language.
             </p>
             </td>
         </tr>
@@ -33,26 +34,27 @@
     </table>
     <hr>
 <h3>contact me....</h3>
-<form action="mailto:se.temesgen.geta@gmail.com" enctype="utf-8" method = "POST">
-    <table>
+<table>
+       <form action="mailto:se.temesgen.geta@gmail.com" enctype="utf-8" method = "POST">
+   
         <tr>
 <td>
     <table>
         <tr>
             <td><label for="fName">First Name:</label></td>
-            <td> <input type="text" name = "fName" id="fName" required></td>
+            <td> <input type="text" name = "fName" id="fName" pattern = "[A-za-z]{1,}" placeholder = "first_name" required></td>
         </tr>
         <tr>
-            <td><label for="sName"> Sure Name:</label></td>
-            <td><input type="text" name = "sName" id="sName" required></td>
+            <td><label for="sName"> Surname:</label></td>
+            <td><input type="text" name = "sName" id="sName" pattern = "[A-za-z]{1,}" placeholder = "surname" required></td>
         </tr>
         <tr>
             <td><label for="email">Email:</label></td>
-            <td><input type="email" name = "email" id = "email" required></td>
+            <td><input type="email" name = "email" id = "email" placeholder = "email" required></td>
         </tr>
         <tr>
             <td><label for="Password">Password:</label></td>
-            <td><input type="text" name="password" id = "password" required></td>
+            <td><input type="text" name="password" id = "password" pattern = "[A-za-z0-9]{8,}" placeholder = "password" required></td>
         </tr>
         <tr>
             <td><label for="gender">Gender:</label></td>
@@ -64,7 +66,7 @@
         <tr>
             <td><label for="phone">Phone Number:</label></td>
             <td>
-                <input type="number" name = "phoneNo." id = "phoneid" required>
+                <input type="number" name = "phoneNo." id = "phoneid" placeholder = "Phone_number" required>
             </td>
         </tr>
         <tr>
@@ -84,7 +86,8 @@
         <tr><td> <input type="submit" value = "submit"> </td></tr>
     </table>
 </td>
-            <td width = "700%"> 
+</form>
+            <td> 
                 <div class="mapouter" width = "150" length = "150"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" 
                     src="https://maps.google.com/maps?q=AAiT&t=&z=13&ie=UTF8&iwloc=&output=embed" 
                     frameborder="0" scrolling="no" marginheight="0" marginwidth="0">
@@ -92,13 +95,27 @@
                     </div><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}
                     </style></div>
             </td>
+        
+            <td>
+                <table align="left">
+                    <tr>
+                        <td><a href="https://twitter.com/" target = "_blank">twitter</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="https://www.youtube.com/" taget = "_blank">youtube</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="https://www.yahoo.com/" target = "_blank">Yahoo</a></td>
+                    </tr>
+                    <tr><td>
+                        <a href="https://www.instagram.com/" target = "_blank">instagram</a>
+                    </td></tr>
+                </table>
+            </td>
     </tr>
 </table>
     
-</form>
-<a href="https://twitter.com/" target = "_blank">twitter</a> |
-<a href="https://www.youtube.com/" taget = "_blank">youtube</a> |
-<a href="https://www.yahoo.com/" target = "_blank">Yahoo</a> |
-<a href="https://www.instagram.com/" target = "_blank">instagram</a>
+
+
 </body>
 </html>
