--- a/index.html
+++ b/index.html
@@ -15,17 +15,18 @@
     <a href="Gallery.html">Gallery</a>
     <hr>
     <!-- list.......... -->
-    <table cellspacing = "10">
+    <table cellspacing = "10" >
         <tr>
             <td>
-        <img src="images/teme.JPG" border="1" alt="Temesgen profile image" width = "150" length ="150">
+        <img src="images/teme.JPG" alt="Temesgen profile image" width = "150" length ="150">
             </td>
             <td>
                 <h1>Temesgen Geta </h1>
-                <h3>Student, Addis Ababa Institute of Technology</h3>
-                <p>Hi there, </p>
-                <p>I am Temesgen, I am expert <strong>java</strong> developer who has been working on java since
-                <em>14</em></em14> years. I am passionate about working in different types of programming language
+                <h3>Student @ Addis Ababa Institute of Technology</h3>
+                <p>Hi friends:</p>
+                <p>I am Temesgen, I am expert <strong>web</strong> developer who has been working
+                     on web since <em>14</em></em14> years. I am passionate about working in different
+                      types of programming language such as python, java, c++, csharp and also script language.
             </p>
             </td>
         </tr>
@@ -36,7 +37,7 @@
 <hr>
 <h3>Hobbies and Interest</h3>
 <ul>
-    <li>sport: I like to watch and play
+    <li>sport: I like to watch and play.
         <ul>
             <li>FootBall</li>
             <li>BasketBall</li>
@@ -51,7 +52,7 @@
             <li>fictions specially of literatuer
                 <li>Books that impress me the most:
                     <ul>
-                        <li>one love by Mr. Hadis Alemayehu</li>
+                        <li>Fikir Eske Mekabir by Mr. Haddis Alemayehu</li>
                         <li>Black Magic by Mr. Samuel A.</li>
                     </ul>
 
@@ -74,16 +75,16 @@
     </thead>
     <tbody>
         <tr>
-            <td>12/3/2009 --- 13/5/2011</td>
+            <td>12/3/20013 --- 13/5/2015</td>
             <td>School lab assistant</td>
         </tr>
         <tr>
-            <td>9/3/2006 --- 4/4/2008</td>
+            <td>9/3/2017 --- 4/4/2018</td>
             <td>Web developer</td>
         </tr>
         <tr>
-            <td>11/3/2014 --- 6/7/2018</td>
-            <td> software community Director</td>
+            <td>11/3/2018 --- 6/7/2019</td>
+            <td> software community Head</td>
         </tr>
     </tbody>
 </table>
@@ -91,12 +92,16 @@
 <h3>Top Skills</h3>
 <table cellspacing ="10">
     <tr>
-        <td>PHP web development</td>
+        <td>Web development</td>
         <td>⭐⭐⭐⭐⭐</td>
     </tr>
     <tr>
         <td>HTML, CSS, and JavaScript</td>
         <td>⭐⭐⭐⭐⭐</td>
+    </tr>
+    <tr>
+        <td>Mobile app development</td>
+        <td>Very good</td>
     </tr>
 </table>
     
