I have added icons

--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Temesgen Cv</title>
+    <link rel="icon" href="images/contact_icon.png">
 </head>
 <body>
     <hr>
@@ -34,7 +35,7 @@
     </table>
     <hr>
 <h3>contact me....</h3>
-<table>
+<table cellspacing = "100">
        <form action="mailto:se.temesgen.geta@gmail.com" enctype="utf-8" method = "POST">
    
         <tr>
