--- a/Gallery.html
+++ b/Gallery.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Temesgen Cv</title>
+    <link rel="icon" href="images/gallery_icon.jfif">
 </head>
 <body>
     <hr>
