contact link is added at right side of contact page

--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
 
     </table>
     <hr>
-<h3>contact me....</h3>
+<h3>Contact me...</h3>
 <table cellspacing = "100">
        <form action="mailto:se.temesgen.geta@gmail.com" enctype="utf-8" method = "POST">
    
@@ -98,18 +98,18 @@
             </td>
         
             <td>
-                <table align="left">
+                <table>
                     <tr>
-                        <td><a href="https://twitter.com/" target = "_blank">twitter</a></td>
+                        <td><a href="https://twitter.com/" target = "_blank"><img src="images/twitter.jfif" alt="" width = "100" length = "100"></a></td>
                     </tr>
                     <tr>
-                        <td><a href="https://www.youtube.com/" taget = "_blank">youtube</a></td>
+                        <td><a href="https://www.facebook.com/temesgengeta.temesgengeta" taget = "_blank"><img src="images/facebook.jfif" alt="" width = "100" length = "100"></a></td>
                     </tr>
                     <tr>
-                        <td><a href="https://www.yahoo.com/" target = "_blank">Yahoo</a></td>
+                        <td><a href="https://www.yahoo.com/" target = "_blank"><img src="images/yahoo.png" alt="" width = "100" length = "100"></a></td>
                     </tr>
                     <tr><td>
-                        <a href="https://www.instagram.com/" target = "_blank">instagram</a>
+                        <a href="https://www.instagram.com/" target = "_blank"><img src="images/instagram.jfif" alt="" width = "100" length = "100"></a>
                     </td></tr>
                 </table>
             </td>
