--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
     <table cellspacing = "10">
         <tr>
             <td>
-        <img src="images/teme.JPG" border="1" alt="Temesgen profile image" width = "150" length ="150">
+        <img src="images/teme.JPG" alt="Temesgen profile image" width = "200" length ="200">
             </td>
             <td>
                 <h1>Temesgen Geta </h1>
@@ -115,8 +115,5 @@
             </td>
     </tr>
 </table>
-    
-
-
 </body>
 </html>
