--- a/Gallery.html
+++ b/Gallery.html
@@ -35,7 +35,7 @@
         </tr>
     </table>
     <hr>
-    <table>
+    <table cellspacing = "35">
         <tr><td style = "text-align:center"><h3>MY favorite food items</h3></td></tr>
         <tr>
             <td><p>Span of vegetable</p><br><img src="https://images.pexels.com/photos/5938/food-salad-healthy-lunch.jpg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="pic1" width = "450" length = "450"></td>
