I have replaced hr with border bottom!

--- a/contact.html
+++ b/contact.html
@@ -8,32 +8,34 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Temesgen Cv</title>
     <link rel="icon" href="images/contact_icon.png">
+    <link rel="stylesheet" href="css/style.css"> 
+
 </head>
 <body>
-    <hr>
-    <a href="index.html">Home</a> |
-    <a href="contact.html">Contact</a> |
-    <a href="Gallery.html">Gallery</a> 
-    <hr>
-    <!-- list.......... -->
-    <table cellspacing = "10">
-        <tr>
-            <td>
-        <img src="images/teme.JPG" alt="Temesgen profile image" width = "200" length ="200">
-            </td>
-            <td>
-                <h1>Temesgen Geta </h1>
+    <div class = "navigation">
+        <a href="#" class = "type">MyCv</a>
+        <div class = "menu">
+            <ul>
+                <li> <a href="index.html">Home</a></li>
+                <li> <a href="contact.html">Contact</a></li>
+                <li> <a href="gallery.html">Gallery</a></li>
+                <li> <a href="MyWorks.html">MyWorks</a></li>
+                <li> <a href="blog.html">Blog</a></li>
+            </ul>
+        </div>
+        <div class = "fixation"></div>
+
+    </div>
+    <div class = "horizontal">
+        <img id = "png" src="images/teme.JPG" alt="Temesgen profile image">
+        <h1>Temesgen Geta </h1>
                 <h3>Student @ Addis Ababa Institute of Technology</h3>
                 <p>Hi friends:</p>
-                <p>I am Temesgen, I am expert <strong>web</strong> developer who has been working on web since
-                <em>14</em></em14> years. I am passionate about working in different types of programming language such as
-                python, java, c++, csharp and also script language.
+                <p>I am Temesgen, I am expert <strong>web</strong> developer who has been working
+                     on web since <em>14</em></em14> years old. <br> I am passionate about working  in different
+                      types of programming language such as python, <br> java, c++, csharp and also script language.
             </p>
-            </td>
-        </tr>
-
-    </table>
-    <hr>
+    </div>
 <h3>Contact me...</h3>
 <table cellspacing = "100">
        <form action="mailto:se.temesgen.geta@gmail.com" enctype="utf-8" method = "POST">
