--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
             what you want to say?
                 <br>
             <textarea name="" id="" cols="30" rows="10"></textarea> <br>
-           <input type="submit" value = "submit">
+           <input id = "onlySubmit" type="submit" value = "submit">
      </form>
 
 </div>
