Flex box is used in home page to create responsive layout.

--- a/index.html
+++ b/index.html
@@ -21,21 +21,22 @@
             </ul>
         </div>
         <div class = "fixation"></div>
-
     </div>
 
-    <div class = "horizontal">
+    <div id = "horizontal">
         <img id = "png" src="images/teme.JPG" alt="Temesgen profile image">
         <h1>Temesgen Geta </h1>
                 <h3>Student @ Addis Ababa Institute of Technology</h3>
                 <p>Hi friends:</p>
                 <p>I am Temesgen, I am expert <strong>web</strong> developer who has been working
                      on web since <em>14</em></em14> years old. <br> I am passionate about working  in different
-                      types of programming language such as python, <br> java, c++, csharp and also script language.
+                      types of programming language such as python, <br> java, c++, csharp and also script languages.
             </p>
     </div>
 
-<div class = "horizontal">
+<div class = "flex-container" id = "horizontal">
+
+<div class = "flex-item">
     <h3>Hobbies and Interest</h3>
 <ul>
     <li>sport: I like to watch and play.
@@ -65,7 +66,7 @@
 </ul>
 </div>
 
-<div class = horizontal>
+<div class = "flex-item">
     <h3>Work experience</h3>
 <table>
     <thead>
@@ -91,9 +92,10 @@
 </table>
 </div>
 
-</div>
+
+<div class = "flex-item">
 <h3>Top Skills</h3>
-<table cellspacing ="10">
+<table>
     <tr>
         <td>Web development</td>
         <td>⭐⭐⭐⭐⭐</td>
@@ -106,8 +108,10 @@
         <td>Mobile app development</td>
         <td>⭐⭐⭐⭐⭐</td>
     </tr>
-</table>  
-    
+</table> 
+</div>
+
+</div>    
 </body>
 
 </html>
