I have used media query on the body and tables.

--- a/Gallery.html
+++ b/Gallery.html
@@ -22,7 +22,7 @@
         <div class = "fixation"></div>
 
     </div>
-    <div class = "horizontal">
+    <div id = "horizontal">
         <img id = "png" src="images/teme.JPG" alt="Temesgen profile image">
         <h1>Temesgen Geta </h1>
                 <h3>Student @ Addis Ababa Institute of Technology</h3>
@@ -32,7 +32,7 @@
                       types of programming language such as python, <br> java, c++, csharp and also script language.
             </p>
     </div>
-    <h3>Temesgen/Gallery</h3>
+    <h3 id = "H3">Temesgen/Gallery</h3>
     <section class = "mar">
     <div id = "pic">
         <img src="https://images.pexels.com/photos/5938/food-salad-healthy-lunch.jpg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="pic1" >
