--- a/MyWorks.html
+++ b/MyWorks.html
@@ -20,7 +20,7 @@
         </div>
         <div class = "fixation"></div>
     </div>
-    <div class = "horizontal">
+    <div id = "horizontal">
         <img id = "png" src="images/teme.JPG" alt="Temesgen profile image">
         <h1>Temesgen Geta </h1>
                 <h3>Student @ Addis Ababa Institute of Technology</h3>
