--- a/blog.html
+++ b/blog.html
@@ -5,18 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Temesgen Geta /Blog</title>
     <link rel="stylesheet" href="css/style.css">
-    <style>
-        /* this is internal style */
-        /* ele {
-            key:value
-        } */
-        /* p{
-            color:green;
-        }
-        body{
-            color:blue;
-        } */
-    </style>
+ 
 </head>
 <body>
     <div class = "navigation">
@@ -33,13 +22,7 @@
         <div class = "fixation"></div>
 
     </div>
-    <!-- inline -->
-    <!-- 16px=1rem/em=100% -->
-    <!-- <p style = "color:red">This is styling</p>
-    <p>this is style 2</p>
-    <p>this is style 2</p> -->
-    <!-- navigation -->
-    <div class = "horizontal">
+    <div id = "horizontal">
         <img id = "png" src="images/teme.JPG" alt="Temesgen profile image">
         <h1>Temesgen Geta </h1>
                 <h3>Student @ Addis Ababa Institute of Technology</h3>
