--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
         <div class = "fixation"></div>
 
     </div>
-    <div class = "horizontal">
+    <div id = "horizontal">
         <img id = "png" src="images/teme.JPG" alt="Temesgen profile image">
         <h1>Temesgen Geta </h1>
                 <h3>Student @ Addis Ababa Institute of Technology</h3>
