I have added question1.html and question1.css.

--- a/Gallery.html
+++ b/Gallery.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Temesgen Geta</title>
     <link rel="icon" href="images/gallery_icon.jfif">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -22,7 +22,7 @@
         <div class = "fixation"></div>
 
     </div>
-    <div id = "horizontal">
+    <!-- <div id = "horizontal">
         <img id = "png" src="images/teme.JPG" alt="Temesgen profile image">
         <h1>Temesgen Geta </h1>
                 <h3>Student @ Addis Ababa Institute of Technology</h3>
@@ -30,8 +30,8 @@
                 <p>I am Temesgen, I am expert <strong>web</strong> developer who has been working
                      on web since <em>14</em></em14> years old. <br> I am passionate about working  in different
                       types of programming language such as python, <br> java, c++, csharp and also script language.
-            </p>
-    </div>
+                </p>
+    </div> -->
     <h3 id = "H3">Temesgen/Gallery</h3>
     <section class = "mar">
     <div id = "pic">
@@ -49,10 +49,7 @@
         <img src="https://images.pexels.com/photos/34085/pexels-photo.jpg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="pic8">
         <img src="https://images.pexels.com/photos/585750/pexels-photo-585750.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
     </div>
-</section>
 
-
-
-    
+</section> 
 </body>
 </html>
