--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 <div class = "flex-container" id = "horizontal">
 
 <div class = "flex-item">
-    <h3>Hobbies and Interest</h3>
-<ul>
+    <h3 id = "bold">Hobbies and Interest</h3>
+<ul id = "bold">
     <li>sport: I like to watch and play.
         <ul>
             <li>FootBall</li>
