Answer for question 4 is added in the blog page.

--- a/Gallery.html
+++ b/Gallery.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class = "navigation">
-        <a href="#" class = "type">MyCv</a>
+        <a href="index.html" class = "type">MyCv</a>
         <div class = "menu">
             <ul>
                 <li> <a href="index.html">Home</a></li>
@@ -22,7 +22,7 @@
         <div class = "fixation"></div>
 
     </div>
-    <!-- <div id = "horizontal">
+    <div id = "horizontal">
         <img id = "png" src="images/teme.JPG" alt="Temesgen profile image">
         <h1>Temesgen Geta </h1>
                 <h3>Student @ Addis Ababa Institute of Technology</h3>
@@ -31,7 +31,7 @@
                      on web since <em>14</em></em14> years old. <br> I am passionate about working  in different
                       types of programming language such as python, <br> java, c++, csharp and also script language.
                 </p>
-    </div> -->
+    </div>
     <h3 id = "H3">Temesgen/Gallery</h3>
     <section class = "mar">
     <div id = "pic">
