--- a/MyWorks.html
+++ b/MyWorks.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class = "navigation">
-        <a href="#" class = "type">MyCv</a>
+        <a href = "index.html" class = "type">MyCv</a>
         <div class = "menu">
             <ul>
                 <li> <a href="index.html">Home</a></li>
@@ -30,6 +30,14 @@
                       types of programming language such as python, <br> java, c++, csharp and also script language.
             </p>
     </div>
-    <a href="question1.html">Question1</a>
+  <nav>
+      <div>
+          <ul id = "u">
+              <li id = "l"><a id = "j" href="question1.html" target = "_blank">Selector</a></li>
+              <li id = "l"><a id = "j" href="question2.html" target = "_blank">TicTac</a></li>
+              <li id = "l"><a id = "j" href="question3.html" target = "_blank">Flags</a></li>
+          </ul>
+      </div>
+  </nav>
 </body>
 </html>
