--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class = "navigation">
-        <a href="#" class = "type">MyCv</a>
+        <a href="index.html" class = "type">MyCv</a>
         <div class = "menu">
             <ul>
                 <li> <a href="index.html">Home</a></li>
@@ -94,13 +94,13 @@
  </div>  
  <div id = "spacing" >
 
-    <a class = "contacts" href="https://twitter.com/" target = "_blank"><img id ="media" src="images/twitter.jfif" alt="" ></a>
+    <a id = "fb" class = "contacts" href="https://twitter.com/" target = "_blank"><img id ="media" src="images/twitter.jfif" alt="" ></a>
 
-    <a class = "contacts" href="https://www.facebook.com/temesgengeta.temesgengeta" taget = "_blank"><img id ="media" src="images/facebook.jfif" alt=""></a>
+    <a id = "fb" class = "contacts" href="https://www.facebook.com/temesgengeta.temesgengeta" taget = "_blank"><img id ="media" src="images/facebook.jfif" alt=""></a>
 
-    <a class = "contacts" href="https://www.yahoo.com/" target = "_blank"><img id ="media" src="images/yahoo.png" alt=""></a>
+    <a id = "fb" class = "contacts" href="https://www.yahoo.com/" target = "_blank"><img id ="media" src="images/yahoo.png" alt=""></a>
 
-    <a class = "contacts" href="https://www.instagram.com/" target = "_blank"><img id ="media" src="images/instagram.jfif" alt=""></a>
+    <a id = "fb" class = "contacts" href="https://www.instagram.com/" target = "_blank"><img id ="media" src="images/instagram.jfif" alt=""></a>
 </div> 
 
 </div>
