--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class = "navigation">
-        <a href="#" class = "type">MyCv</a>
+        <a href="index.html" class = "type">MyCv</a>
         <div class = "menu">
             <ul>
                 <li> <a href="index.html">Home</a></li>
@@ -111,7 +111,67 @@
 </table> 
 </div>
 
-</div>    
+</div> 
+
+<div class = "flex-container">
+<div id = "bg" class = "flex-item">
+    <div id = "opacity">
+        <h3>Personal Information</h3>
+        <ul>
+            <li> Sex ------ Male
+            </li>
+            <li>Date of Birth ------ 17/05/1999
+            </li>
+            <li>Place of Birth ------ Debre Work
+            </li>
+            <li>Nationality ------ Ethiopian
+            </li>
+            <li>Marital Status ------ Single</li>
+            <li>Phone Number ------ 0948260730</li>
+            <li>P.O.BOX ------ Addis Ababa 150545</li>
+        </ul>
+    </div>
+</div>
+
+
+
+
+<div id = "bg" class = "flex-item">
+    <div id = "opacity">
+        <h3>Educational Information</h3>
+        <ul>
+            <li>Bsc in Software Engineering, Addid Ababa University, Addis Ababa.
+                From 2018 – up to now in progress
+            </li>
+            <li>
+               Preparatory School – Debre Work, leaving certificate awarded.
+               From 2016 – 2018 G.C 
+
+            </li>
+            <li>
+                Secondary school – Debre Work, leaving certificate awarded.
+               From 2014 – 2016 G.C
+
+            </li>
+            <li>
+                Primary school – Debre Work, leaving certificate awarded.
+                From 2006 – 2014 G.C
+
+            </li>
+        </ul>
+    </div>
+</div>
+
+</div>
+<div id = "og" class = "flex-item">
+    <div id = "opacity">
+        <p>I am software engineering student!</p>
+    </div>
+</div>
+
+
+
+
 </body>
 
 </html>
