--- a/question3.html
+++ b/question3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flags</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/question3.css">
 </head>
 <body>
     <div class = "container">
@@ -62,11 +62,23 @@
             </div>
             <div id="f"></div>
         </div>
+
+
         <div class = "part">
             <div id="d"></div>
             <div id="e"></div>
             <div id="a"></div>
+            <div id = "circle"></div>
+            <div id = "array1">|</div>
+            <div id = "array2">|</div>
+            <div id = "array3">|</div>
+            <div id = "array4">|</div>
+            <div id = "array5">|</div>
+            <div id = "star">&#9956;</div>
         </div>
+
+
+
         <div class = "part">
             <div id="a"></div>
             <div id="g"></div>
